--- a/src/components/alg/alg-conspect/fatin/pages/elem-fatin-06.html
+++ b/src/components/alg/alg-conspect/fatin/pages/elem-fatin-06.html
@@ -438,8 +438,8 @@ function goodOffset(i) {
   <p>Второй бинарный поиск findTarget для поиска target</p>
   <p>Для второго бинарного поиска функция goodTarget делит массив на две части</p>
 <pre>
-function goodOffset(i) {
-  return nums[i] >= nums[nums.length-1];
+function goodTarget(i) {
+  return nums[i] &lt;= target;
 }
 </pre>
 
