--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp11.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp11.html
@@ -380,6 +380,34 @@ int main() {
 </pre>
   <p>В первом наборе входных данных  gcd(1,2)=gcd(2,3)=gcd(1,3)=1</p>
   <p>Во втором наборе входных данных 2 является максимальным возможным значением, соответствующим gcd(2,4).</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Максимальный НОД для пары чисел (a, b) будет максимальным числом d, для которого существует хотя бы два числа в диапазоне от 1 до n, делящиеся на d. Для каждого входного числа n, ответом будет n / 2, округленное вниз (целочисленное деление).</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // количество тестов
+  int t;
+  cin >> t;
+
+  while (t--) {
+    // ввод данных
+    int n;
+    cin >> n;
+
+    // решение
+    int res = n / 2;
+
+    // вывод результата
+    cout &lt;&lt; res &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
