--- a/src/components/alg/alg-conspect/yargu3/pages/elem-spRound988.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-spRound988.html
@@ -655,106 +655,96 @@ int main() {
 
 using namespace std;
 
-int main()
-{
-	//#ifdef _DEBUG
-		//freopen("input.txt", "rt", stdin);
-		//freopen("output.txt", "wt", stdout);
-	//#endif
-	int test;
-	cin >> test;
-	//сложная интерактивная задача
-	//заметим что нам разрешено делать n запросов
-	for (int t = 0; t &lt; test; t++)
-	{
-		int n;
-		cin >> n;
+int main() {
+  //#ifdef _DEBUG
+    //freopen("input.txt", "rt", stdin);
+    //freopen("output.txt", "wt", stdout);
+  //#endif
+  int test;
+  cin >> test;
+  //сложная интерактивная задача
+  //заметим что нам разрешено делать n запросов
+  for (int t = 0; t &lt; test; t++) {
+    int n;
+    cin >> n;
 
-		vector&lt;int&gt; Res(n + 1, -1);//массив ответа
-		vector&lt;int&gt; A(n + 1, 0);//массив последовательности
-		for (int r = 2; r &lt;= n; r++)//задаем кучу запросов формата 1 r. Дальше мы будем узнавать информацию в позиции r
-		{
-			int tmp;
-			cout &lt;&lt; "? 1 " &lt;&lt; r &lt;&lt; '\n';
-			fflush(stdout);
-			cin >> tmp;
-			A[r] = tmp;
-		}
-		bool flag = true;// проверка, что можем собрать последовательность
-		if (A[n] == 0)// ситуация в которой строка либо куча 000000000000 либо 111111111111 мы не можем определить
-		{
-			flag = false;
-		}
-		for (int i = n; i > 1; i--)//пойдем собирать нашу последовательность с конца
-		{
-			// мы можем определить по значению двух соседей i i-1 отличаются они или нет элемент в позиции i
-			if (A[i] > 0)
-			{
-				if (A[i] - A[i - 1] > 0) // если отличаются то мы берем 1
-				{
-					Res[i] = 1;
-				}
-				else// если не отличаются то мы берем 0
-				{
-					Res[i] = 0;
-				}
-			}
-		}
+    vector&lt;int&gt; Res(n + 1, -1);//массив ответа
+    vector&lt;int&gt; A(n + 1, 0);//массив последовательности
 
-		int uk = 0;// остается доопределить начало. Для этого найдем первую позицию в массиве A отличную от 0
-		for (int i = 1; i &lt;= n; i++)
-		{
-			if (A[i] > 0)
-			{
-				uk = i;
-				break;
-			}
-		}
-		if (uk > 0)
-		{//если мы нашли позицию то мы точно можем сказать что в позиции uk стоит 1 и перед ней есть какое то количество 0 и 1
-			// более того сначала стоят 1 а потом стоят 0
-			//количество 0 равняется значению count
-			int pos = uk - 1;
-			int count = A[uk];
-			for (int i = pos; i >= 1; i--)
-			{
-				if (count > 0)
-				{
-					count--;
-					Res[i] = 0;
-				}
-				else
-				{
-					Res[i] = 1;
-				}
-			}
-			//как итог сформировали всю последовательность сначала ее хвост, потом голову
-		}
+    //задаем кучу запросов формата 1 r.
+    // Дальше мы будем узнавать информацию в позиции r
+    for (int r = 2; r &lt;= n; r++) {
+      int tmp;
+      cout &lt;&lt; "? 1 " &lt;&lt; r &lt;&lt; '\n';
+      fflush(stdout);
+      cin >> tmp;
+      A[r] = tmp;
+    }
+    bool flag = true;// проверка, что можем собрать последовательность
+    if (A[n] == 0)// ситуация в которой строка либо куча 000000000000 либо 111111111111 мы не можем определить
+    {
+      flag = false;
+    }
+    for (int i = n; i > 1; i--)//пойдем собирать нашу последовательность с конца
+    {
+      // мы можем определить по значению двух соседей i i-1 отличаются они или нет элемент в позиции i
+      if (A[i] > 0)
+      {
+        if (A[i] - A[i - 1] > 0) // если отличаются то мы берем 1
+        {
+          Res[i] = 1;
+        }
+        else// если не отличаются то мы берем 0
+        {
+          Res[i] = 0;
+        }
+      }
+    }
+
+    int uk = 0;// остается доопределить начало. Для этого найдем первую позицию в массиве A отличную от 0
+    for (int i = 1; i &lt;= n; i++) {
+      if (A[i] > 0)
+      {
+        uk = i;
+        break;
+      }
+    }
+    //если мы нашли позицию то мы точно можем сказать
+    //что в позиции uk стоит 1 и перед ней есть какое
+    //то количество 0 и 1 более того сначала стоят 1
+    //а потом стоят 0 количество 0 равняется значению count
+    if (uk > 0) {
+      int pos = uk - 1;
+      int count = A[uk];
+      for (int i = pos; i >= 1; i--) {
+        if (count > 0) {
+          count--;
+          Res[i] = 0;
+        } else {
+          Res[i] = 1;
+        }
+      }
+      //как итог сформировали всю последовательность сначала ее хвост, потом голову
+    }
 
 
-		if (flag)
-		{
-			string otv = "! ";//формируем свой ответ как единую строку
+    if (flag) {
+      string otv = "! ";//формируем свой ответ как единую строку
 
-			for (int i = 1; i &lt;= n; i++)
-			{
-				if (Res[i] == 0)
-				{
-					otv += "0";
-				}
-				else
-				{
-					otv += "1";
-				}
-			}
-			cout &lt;&lt; otv &lt;&lt; '\n';
-			fflush(stdout);
-		}
-		else {
-			cout &lt;&lt; "! IMPOSSIBLE" &lt;&lt; '\n';//не смогли построить ответ
-			fflush(stdout);
-		}
-	}
+      for (int i = 1; i &lt;= n; i++) {
+        if (Res[i] == 0) {
+          otv += "0";
+        } else {
+          otv += "1";
+        }
+      }
+      cout &lt;&lt; otv &lt;&lt; '\n';
+      fflush(stdout);
+    } else {
+      cout &lt;&lt; "! IMPOSSIBLE" &lt;&lt; '\n';//не смогли построить ответ
+      fflush(stdout);
+    }
+  }
 }
 </pre>
   </details>
