--- a/src/components/code/code-c/c-books/pages/elem-book11.html
+++ b/src/components/code/code-c/c-books/pages/elem-book11.html
@@ -414,6 +414,141 @@ while ((c = getchar()) == BLANK) {
   <h3>5 Функции и завершенные программы (90)</h3>
 
   <h4>5.1 Функции (90)</h4>
+
+  <p>В качестве результата функция не может возвращать массив или функцию, но может возвращать указатель на массив или функцию.</p>
+
+  <h4>5.1.1 Описание параметров</h4>
+
+  <h4>5.1.2 Управление видимостью функций</h4>
+
+  <p>В языке Си вложенные функции недопускаются.</p>
+
+  <h4>5.1.3 Вызов функций</h4>
+
+  <p>Параметры передаются по значению и по ссылке. В языке Си есть только один способ - передача по значению.</p>
+
+  <h4>5.1.4 Обращение к функции до ее определения.</h4>
+
+  <h4>5.1.5 Пример, иллюстрирующий передачу параметров</h4>
+
+  <h4>5.1.6 Автоматические преобразования фактических параметроа</h4>
+
+  <h4>5.1.7 Передача функций в качестве параметров</h4>
+
+  <h4>5.1.8 Спецификации функции</h4>
+
+  <h4>5.2 Лексическая область действия идентификаторов (100)</h4>
+
+  <p>Областью действия параметров функции является тело функции.</p>
+
+  <h4>5.3 Ввод и вывод (101)</h4>
+
+  <p>Язык Си не имеет средств для ввода и вывода. Однако такие средства обеспечиваются большим числом библиотечных функций.</p>
+  <p>Данные можно вводить из файла и выводить в файл. Можно вводить из потока и выводить в поток. Поток это файл, ассоциированный с буфером. Прямой доступ к файлу или потоку невозможен. Для доступа используются указатели на файл и на поток.</p>
+
+  <h4>5.3.1 Использование потоков, определяемых программистом</h4>
+
+  <h4>5.4 Переназначение ввода и вывода (105)</h4>
+
+  <p>Если компилятор скомпилировал программу в файл program.exe, то для ввода и вывода используются потоки stdin и stdout, если программу вызвать просто по имени</p>
+  <code>program</code>
+  <p>Чтобы переназначить поток ввода с stdin на файл data, нужно вызвать программу вместе с оператором переназначения ввода</p>
+  <code>program &lt; data</code>
+  <p>Теперь данные будут браться не из терминала , а из файла data. Чтобы переназначить поток вывода с stdout на файл result, нужно вызвать программу вместе с оператором переназначения вывода</p>
+  <code>program > result</code>
+  <p>Теперь данные будут выводиться не на терминал, а в файл result.</p>
+
+  <h4>5.5 Головные программы (107)</h4>
+
+  <p>Программу на языке Си можно разделить на несколько частей так, что каждая часть будет содержаться в отдельном файле. Программа начинается с функции main(). Чтобы функция main могла использовать другие функции, их определение должно распологаться раньше функции main.</p>
+
+  <h4>5.6 Примеры (109)</h4>
+
+  <h4>5.6.1 Удаление последовательностей знаков форматирования из текста программы на языке Ада</h4>
+
+  <h4>5.6.2 Получение изображения бланка из табличного описания</h4>
+
+  <details>
+    <summary>Программа 3 (114)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+#define NUMB_ROWS 23
+#define NUMB_COLS 79
+#define MAX_ROW (NUMB_ROWs-1)
+#define MAX_COL (NUMB_COLS-1)
+
+int main() {
+  int i, j;
+  char c;
+  char display[NUMB_ROWS][NUMB_COLS];
+
+  for (i = 0; i &lt;= MAX_ROW; i++) {
+    for (j = 0; j &lt;= MAX_COL; j++) {
+      if (j == 0 || j == MAX_COL) {
+        display[i][j] = '|';
+      } else if (i == 0 || i == MAX_ROW) {
+        display[i][j] = '-';
+      } else {
+        display[i][j] = ' ';
+      }
+    }
+  }
+
+  while (scanf("%d%d%c", &i, &j, &c) != EOF) {
+    while ((c = getchar()) != '\n') {
+      display[i][j++] = c;
+    }
+  }
+
+  for (i = 0; i &lt;= MAX_ROW; i++) {
+    for (j = 0; j &lt;= MAX_COL; j++) {
+      putchar(display[i][j]);
+    }
+    putchar('\n');
+  }
+
+  exit(0);
+}
+</pre>
+  </details>
+
+  <h4>5.6.3 Улучшение изображения документа на терминале</h4>
+
+  <h4>5.6.4 Функция sine вычисления значения синуса</h4>
+
+  <p>Функция вычисляет значение синуса, с заданной точность. eps</p>
+
+  <details>
+    <summary>Программа 4 (117)</summary>
+<pre>
+double sine(double x, double eps) {
+  double sum, term;
+  int k;
+  term = x; k = 1; sum = term;
+
+  while (fabs(term) > eps * fabs(sum)) {
+    k += 2;
+    term *= (x * x) / (k * (k - 1));
+    sum += term;
+  }
+
+  return sum;
+}
+</pre>
+  </details>
+
+  <h4>5.6.5 Метод наименьших квадратов для построения кривой</h4>
+
+  <h4>5.6.6 Быстрая сортировка</h4>
+
+  <h4>5.6.7 Управление скоростью автомобиля</h4>
+
+  <h4>5.6.8 Передача функций в качестве параметров</h4>
+
+  <h4>5.6.9 Поиск в массиве</h4>
+
+  <h4>5.7 Задачи (130)</h4>
 </article>
 
 
@@ -422,6 +557,97 @@ while ((c = getchar()) == BLANK) {
   <div class="anchor" id="p6"></div>
   <h3>6 Раздельная компиляция и абстрагирование данных (132)</h3>
 
+  <p>Текст программы может быть в одном файле, а может в нескольких файлах. Эти файлы могут компилироваться независимо. Отдельно скомпилированные компоненты программ и функции стандартных библиотек могут быть объединены в одну законченную программу. Разделение программы на меньшие части облегчает построение, понимание и сопровождение кода больших систем. При изменении программы необходимо выполнить повторную компиляцию только измененных компонентов. Перекомпиляыия всех файлов в большой программе нежелательна из-за больших затрат времени и ресурсов.</p>
+
+  <h4>6.1 Область действия внешних определений и описаний (133)</h4>
+
+  <p>Внешние объекты и функции могут иметь класс памяти extern (по умолчанию) или static. Область действия объектов с классом static ограничивается файлом, в котором он описан. Область действий обаъектов с классом extern включает в себя все файлы в программе.</p>
+
+  <h4>6.2 Раздельная компиляция (134)</h4>
+
+  <p>Если код программы содержится в различных файлах file1.c, file2.c, file3.c, то их можно скомпилировать в одну программу командой</p>
+  <code>gcc file1.c file2.c file3.c</code>
+  <p>Если каждый файл был скомпилирован отдельно в объектный файл командами</p>
+  <code>gcc -c file1.c file2.c file3.c</code>
+  <p>Для каждого файла компилятор создаст объектные файлы file1.o, file2.o, file3.o, их объединить в одну программу командой</p>
+  <code>gcc file1.o file2.o file3.o</code>
+
+  <h4>6.3 Абстрактные типы данных и сокрытие информации (135)</h4>
+
+  <h4>6.3.1 Стек - пример абстрактного типа даннх</h4>
+
+  <p>Допускается выполнение операций</p>
+  <ol>
+    <li>push(i) добавить элемент i в стек</li>
+    <li>pop() удалить верхний элемент</li>
+    <li>top() вернуть значение верхнего элемента</li>
+    <li>empty() true если стек пуст</li>
+    <li>full() true если стек полон</li>
+    <li>clear() очистить стек</li>
+  </ol>
+
+  <details>
+    <summary>Файл stack.c</summary>
+<pre>
+#define MAX_SIZE 200
+static int s[MAX_SIZE];
+static int next = 0;
+
+void push(int i) {
+  if (next == MAX_SIZE) {
+    printf("push: error: stack is full\n");
+    exit(1);
+  }
+  s[next++] = 1;
+}
+
+void pop() {
+  if (next == 0) {
+    printf("pop: error: stack empty\n");
+    exit(1);
+  }
+  return s[next-1];
+}
+
+int empty() {
+  return next == 0;
+}
+
+int full() {
+  return next == MAX_SIZE;
+}
+
+void clear() {
+  next = 0;
+}
+</pre>
+  </details>
+
+  <h4>6.3.2 Ограниченность файлов как средств абстрагирования данных</h4>
+
+  <p>Файлы не ставят своей целью сокрытие информации и абстрагирования данных. Файлы предназначаются для разбиения программы на части и раздельной компиляции.</p>
+
+  <h4>6.4 Классы (138)</h4>
+
+  <p>Классы не являются частью стандарта языка Си. Классы включены только в язык Си++. Применение классов позволяет вводить полноправные типы, определенные пользователем. В отличие от операции typedef, который не обеспечивает механизма для описания операций. Он только позволяет описывать множество значений.</p>
+  <p>Описание класса аналогично описанию структур. Открытая часть класса является интерфейсом между пользователем и абстрактным типом данных, закрытая часть класса содержит детали реализации.</p>
+  <p>Команды new и delete выделяют и освобождают память для объектов класса. Классы являются полноправнымми типами.</p>
+
+  <h4>6.4.1 Конструкторы, деструкторы и расширение операторов и функций в языке Си++</h4>
+
+  <p>Одна из функций констуктора выполняется автоматически при определении объекта класса. Функция деструктора выполняется при выходе за область видимости класса, например освобождает память от объекта класса. Оператор или функция могут расширяться, то есть один символ операции может быть ассоциирован с более чем одной операцией.</p>
+
+  <h4>6.4.2 Заключительные замечания о классах</h4>
+
+  <h4>6.5 Примеры (143)</h4>
+
+  <h4>6.5.1 Таблица символов</h4>
+
+  <h4>6.5.2 Функции для обработки списков</h4>
+
+  <h4>6.5.3 Класс buffer</h4>
+
+  <h4>6.6 Задачи (151)</h4>
 </article>
 
 
@@ -430,6 +656,24 @@ while ((c = getchar()) == BLANK) {
   <div class="anchor" id="p7"></div>
   <h3>7 Особые ситуации (152)</h3>
 
+  <p>Особые ситуации это такие события как деление на ноль или прерывание выполнения программы. В языке Си отсутствуют специальнные средства для обработки особых ситуаций. Для обработки особых ситуаций в языке Си используются следующие средства:</p>
+  <ol>
+    <li>Коды состояния. Функции возвращают значение -1, если в процессе их выполнения возникла особая ситуация</li>
+    <li>Сигналы в системе UNIX. Сигналы генерируются программно или аппаратно.</li>
+  </ol>
+  <p>Перенос программ, использующих специальные сигналы операционно системы, в другую операционную систему, может потребовать изменений в программе.</p>
+
+  <h4>7.1 Различные сигналы (154)</h4>
+
+  <p>Описание сигналов операционной системы содержатся в файле signal.h.</p>
+
+  <h4>7.2 Установка режима обработки особых ситуаций (155)</h4>
+
+  <p>Когда получен сигнал, для которого указана обрабатывающая функция, выполнение программы приостанавливается и управление передается этой функции, сигнал ей передается в качестве аргумента.</p>
+
+  <h4>7.2.1 Пример использования сигналов для обработки ошибок при выполнении операций с плавающей точкой</h4>
+
+  <h4>7.3 Генерация и посылка сигналов (160)</h4>
 </article>
 
 
