--- a/src/components/code/code-c/c-books/pages/elem-book12.html
+++ b/src/components/code/code-c/c-books/pages/elem-book12.html
@@ -802,6 +802,88 @@ int main() {
 }
 </pre>
   </details>
+  <p>Напишем программу умножения двух матриц, используя многомерные массивы. Чтобы умножить две матрицы, число колонок первой матрицы должно быть равно числу строк второй матрицы. Нужно каждую строку первой матрицы умножить на каждый столбец второй матрицы.</p>
+
+  <details>
+    <summary>Программа 17 (91)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int r1, c1, r2, c2, a[10][10], b[10][10], res[10][10];
+  printf("Enter number rows and colons matrix1");
+  scanf("%d %d", &r1, &c1);
+  printf("Enter number rows and colons matrix2");
+  scanf("%d %d", &r2, &c2);
+
+  while (c1 != r2) {
+    printf("Error %d != %d", r1, c2);
+    printf("Enter number rows and colons matrix1");
+    scanf("%d %d", &r1, &c1);
+    printf("Enter number rows and colons matrix2");
+    scanf("%d %d", &r2, &c2);
+  }
+  printf("Enter elements of matrix1");
+  for (int i = 0; i &lt; r1; i++) {
+    for (int j = 0; j &lt; c1; j++) {
+      printf("Enter element A[%d][%d] ", i+1, j+1);
+      scanf("%d", &a[i][j]);
+    }
+  }
+
+  printf("Enter elements of matrix2");
+  for (int i = 0; i &lt; r2; i++) {
+    for (int j = 0; j &lt; c2; j++) {
+      printf("Enter element B[%d][%d] ", i+1, j+1);
+      scanf("%d", &b[i][j]);
+    }
+  }
+
+  // создаем матрицу результата
+  for (int i = 0; i &lt; r1; i++) {
+    for (int j = 0; j &lt; c2; j++) {
+      res[i][j] = 0;
+    }
+  }
+
+  // умножение двух матриц
+  for (int i = 0; i &lt; r1; i++) {
+    for (int j = 0; j &lt; c2; j++) {
+      for (int k = 0; k &lt; c1; k++) {
+        res[i][j] += a[i][k] + b[k][j];
+      }
+    }
+  }
+
+  // вывод результата
+  printf("Priduct of 2 matrix");
+  for (int i = 0; i &lt; r1; i++) {
+    for (int j = 0; j &lt; c2; j++) {
+      printf("%d ", res[i][j]);
+    }
+    printf("\n");
+  }
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>3.5 Индексация указателей (93)</h4>
+
+  <p>Обращение к элементам массива с помощью указателей используется довольно широко, поскольку операции адресной арифметики выполняются быстрее, чем индексация.</p>
+
+  <h4>3.6 Инициализация массива (94)</h4>
+
+  <code>int j[5] = {1,2,3,4,5};</code>
+  <code>char s[20] = "Hello!";</code>
+  <code>char s[20] = {'H','e','l','l','o','!','\0'};</code>
+<pre>
+int s[2][2] = {
+  {1,1},
+  {2,2}
+}
+</pre>
 </article>
 
 
@@ -810,6 +892,119 @@ int main() {
   <div class="anchor" id="p4"></div>
   <h3>4 Указатели в Си (95)</h3>
 
+  <h4>4.1 Что такое указатели и для чего они нужны (95)</h4>
+
+  <p>Укзатель это переменная, содержащая адрес другой переменной.Указатель нужен для обращения к другой переменной через ее адрес. Указатели позволяют функциям изменять свои аргументы. Указатели позволяют делать динамическое распределение памяти. Указатели повышают эффективность многих процедур.</p>
+
+  <h4>4.2 Объявление указателей и операторы для работы с ними (96)</h4>
+
+  <p>При объявлении указателя надо писать тип переменной, на которую он будет указывать. Указатель может содержать любой адрес с любым типоп переменной, но для правильной арифметики указателей, необходимо этот тип сразу объявлять. Указатель можно присвоить другому указателю.</p>
+
+  <h4>4.3 Адресная арифметика (98)</h4>
+
+  <code>int *p = num;</code>
+  <p>Указатель p содержит адрес переменной num, которая занимает 4 байта памяти.</p>
+  <p>p++;</p>
+  <p>Указатель p  увеличится не на 1, а на 4. И будет указывать на следующий адрес с переменной типа int. Указатель увеличивается или уменьшается на размер типа данных на который он указывает.</p>
+  <p>Указатели сравниваются между собой только когда они указывают на один и тот же объект или массив.</p>
+
+  <h4>4.4 Массивы указателей (100)</h4>
+
+  <p>Массив указателей можно передать в обычную функцию.</p>
+
+  <h4>4.5 Инициализация указателей (101)</h4>
+
+  <p>Глобальные и статические указатели автоматически инициализируются нулем. Если не инициализировать нестатический локальный указатель, то его значение неопределено. При обращении к нему программа завершится ошибкой. При объявлении указатель нужно инициализировать. Если нечем, то значением NULL.</p>
+  <code>struct lnode *new = NULL;</code>
+
+  <h4>4.6 Нулевой указатель (NULL) (102)</h4>
+
+  <p>Указатель до инициализации хранит мусор. При определении указателя принято делать его равным NULL.</p>
+
+  <details>
+    <summary>Программа 18 (103)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;stdlib.h&gt;
+#include &lt;conio.h&gt;
+
+int main() {
+  int *a = NULL;
+  unsigned length;
+  printf("Enter size of array ");
+  scanf("%d", length);
+
+  if (length > 0) {
+    if ((a = (int*)malloc(length * sizeof(int))) != NULL) {
+      for (int i = 0; i &lt; length; i++) {
+        a[i] = i * i;
+      }
+    } else {
+      printf("cannot allocate memory");
+    }
+  }
+
+  if (a != NULL) {
+    free(a);
+  }
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>4.7 Указатели на функции (104)</h4>
+
+  <p>Хотя функция и не является переменной, но она также располагается в памяти и ее адрес можно присвоить указателю. Этот адрес считается точкой входа в функцию и используется при ее вызове. Когда указатель ссылается на функцию, ее можно вызвать с помощью этого указателя.</p>
+  <p>Адрес функции задается ее именем без скобок и аргументов.</p>
+
+  <h4>4.8 Динамическое распределение памяти (105)</h4>
+
+  <p>В ходе выполнения программы возникает необходимость выделить дополнительную память, размер которой заранее не известен. Например, связные списки или деревья, они могут увеличиваться или уменьшаться по мере необходимости.</p>
+  <p>Функции распределения памяти - malloc() и calloc(), функция освобождения памяти - free().</p>
+  <p>Динамическая память находится в куче (heap), которая представляет собой область свободной памяти, расположенную между кодом программы, сегментом данных и стеком.</p>
+  <p>Выделим 2000 байт непрерывной памяти</p>
+  <code>char *s; s = malloc(2000);</code>
+  <p>Напишем программу вычисления максимума в массиве, размер которого мы не знаем</p>
+
+  <details>
+    <summary>Программа 19 (107)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int num;
+  float *data;
+
+  printf("enter numbers of elements ");
+  scanf("%d", &num);
+
+  data = (float*)calloc(num, sizeof(float));
+
+  if (data == NULL) {
+    printf("error allocation memory\n");
+    exit(1);
+  }
+
+  printf ("\n");
+
+  for (int i = 0; i &lt; num; i++) {
+    printf("enter element %d ", i + 1);
+    scanf("%f", data + i);
+  }
+
+  for (int i = 0; i &lt; num; i++) {
+    if (*data &lt; *(data + i)) {
+      *data = *(data + i);
+    }
+  }
+
+  printf("maximum = %.2f\n", *data);
+
+  return 0;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -818,6 +1013,59 @@ int main() {
   <div class="anchor" id="p5"></div>
   <h3>5 Функции в Си (109)</h3>
 
+  <h4>5.1 Синтаксис объявления функции (109)</h4>
+
+  <p>Функция может возвращать переменные любого типа кроме массива.</p>
+  <p>Напишем функцию checkPrimeNumber(), которая возвращает 1, если число является простым или 0 в противном случае.</p>
+<pre>
+int checkPrimeNumber(int n) {
+  int flag = 1;
+  for (int i = 2; i &lt;= n / 2; i++) {
+    if (n % i == 0) {
+      flag = 0;
+      break;
+    }
+  }
+
+  return flag;
+}
+</pre>
+
+  <h4>5.2 Область видимости функции (110)</h4>
+
+  <p>Тело функции это отдельный блок операторов, заключенный в {} фигурные скобки. Код и данные одной функции никак не взаимодействуют с кодом и данными другой функции, поскольку имеют различные области видимости. Локальные переменные функции создаются при входе в функцию и уничтожаются при выходе из нее и не сохраняют свое значение между вызовами функции. Кроме статических локальных переменных. Они хранятся вместе с глобальными переменными, но их область видимости ограничена функцией.</p>
+
+  <h4>5.3 Формальные параметры функции (111)</h4>
+
+  <h4>5.3.1 Список параметров</h4>
+
+  <p>Формальные параметры функции объявляются в заголовке в виде переменных и как и локальные переменные создаются при входе функции и уничтожаются при выходе из нее.</p>
+  <p>Напишем функцию gcd, которая вычисляет НОД двух чисел.</p>
+<pre>
+int gcd(int n1, int n2) {
+  if (n2 != 0) {
+    return gcd(n2, n1 % n2);
+  } else {
+    return n1;
+  }
+}
+</pre>
+
+  <h4>5.3.2 Параметры по ссылке и по значению</h4>
+
+  <p>Параметры в функцию можно передавать по ссылке (call by reference) и по значению (call by value).</p>
+  <p>В случае передачи по значению, функция создает копию параметра и работает с ним. При этом не оказывая влияния на переданную переменную в основной программе.</p>
+  <p>В случае передачи по ссылки, в функцию передается адрес аргумента. Функция создает копию адреса и работает с ним, изменяя значение переменной, записанной по этому адресу. При этом не оказывая влияния на сам адрес переданный в функцию из основной программы.</p>
+
+  <h4>5.3.3 Передача массива в качестве параметра</h4>
+
+  <p>Если функция должна принимать массив, то ей передается адрес массива. Функция при этом получает доступ ко всем элементам массива и может его модифицировать.</p>
+  <p>Перепишем программу умножения двух матриц с использованием функций. Будет три функции:</p>
+  <ol>
+    <li>enterData() ввод данных от пользователя</li>
+    <li>multiplyMatrices() умножение двух матриц</li>
+    <li>display() отображение матрицы</li>
+  </ol>
 </article>
 
 
