--- a/src/components/front/front-learned/pages/elem-day.html
+++ b/src/components/front/front-learned/pages/elem-day.html
@@ -2,6 +2,35 @@
 
 <ol reversed>
 
+  <li>2025.06.14 сб
+    <br>1. <strong>Книга</strong> <i>1988 Джехани - Программирование на языке Си 274стр</i> прочитать 150-160стр
+  </li>
+
+  <li>2025.06.13 пт
+    <br>1. <strong>Книга</strong> <i>1988 Джехани - Программирование на языке Си 274стр</i> прочитать 130-150стр
+  </li>
+
+  <li>2025.06.12 чт
+    <br>1. <strong>Книга</strong> <i>1988 Джехани - Программирование на языке Си 274стр</i> прочитать 120-130стр
+  </li>
+
+  <li>2025.06.11 ср
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 630-640стр
+  </li>
+
+  <li>2025.06.10 вт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 620-630стр
+    <br>2. <strong>Книга</strong> <i>2019 Кольцов - Си на примерах 288стр</i> прочитать 100-110стр
+    <br>3. <strong>Книга</strong> <i>1988 Джехани - Программирование на языке Си 274стр</i> прочитать 100-120стр
+  </li>
+
+  <li>2025.06.09 пн
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 610-620стр
+    <br>2. <strong>Книга</strong> <i>2019 Кольцов - Си на примерах 288стр</i> прочитать 90-100стр
+    <br>3. <strong>Книга</strong> <i>1988 Джехани - Программирование на языке Си 274стр</i> прочитать 90-100стр
+    <br>4. <strong>Курс</strong> <i>2024 спортпрог ЯрГУ.Школьники</i> Codeforces Round 1029 записать условия задач
+  </li>
+
   <li>2025.06.07 сб
     <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 600-610стр
     <br>2. <strong>Книга</strong> <i>2019 Кольцов - Си на примерах 288стр</i> прочитать 80-90стр
