--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp18.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp18.html
@@ -177,6 +177,39 @@ for (int i = 0; i &lt; (1 &lt;&lt; n); i++) {
   <h4>Пример</h4>
   <code>2</code>
   <code>4</code>
+
+  <details>
+    <summary>Решение</summary>
+    <h4>Пример 2</h4>
+    <code>0</code>
+    <code>1</code>
+
+    <h4>Пример 3</h4>
+    <code>10</code>
+    <code>1024</code>
+    <p>Вводится целое число от 0 до 63. Поскольку число может быть очень большое то будем работать с типом данных unsigned long long</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+
+  // решение
+  unsigned long long num = 1;
+  unsigned long long res = 0;
+  res = num &lt;&lt; n;
+
+  // вывод результата
+  cout &lt;&lt; res;
+
+  return 0;
+}
+</pre>
+  </details>
 </article>
 
 
